WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208706
[GTK][WPE] Surrounding text for input methods should not be limited to the current paragraph
https://bugs.webkit.org/show_bug.cgi?id=208706
Summary
[GTK][WPE] Surrounding text for input methods should not be limited to the cu...
Carlos Garcia Campos
Reported
2020-03-06 04:11:15 PST
It should include all the text around the cursor position.
Attachments
Patch
(12.07 KB, patch)
2020-03-06 04:19 PST
,
Carlos Garcia Campos
zan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2020-03-06 04:19:47 PST
Created
attachment 392704
[details]
Patch
EWS Watchlist
Comment 2
2020-03-06 04:20:50 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3
2020-03-09 01:39:52 PDT
Committed
r258131
: <
https://trac.webkit.org/changeset/258131
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug